--- a/index.html
+++ b/index.html
@@ -3,167 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>X-O MATH PRO - النسخة الكاملة</title>
+    <title>X-O MATH PRO - النسخة المستقرة</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="light-mode">
-    <div id="app-bg-mesh"></div>
-
-    <div id="main-wrapper">
-
-        <div id="setup-screen" class="app-screen active">
-            <div class="glass-card main-menu">
-                <header class="menu-header">
-                    <h1 class="logo-text">X-O MATH <span class="badge-pro">PRO</span></h1>
-                    <p class="tagline">الدمج بين الذكاء الحسابي والتخطيط الاستراتيجي</p>
+<body>
+    <div id="app-wrapper">
+        <div id="setup-screen" class="screen-view active">
+            <div class="glass-card">
+                <header>
+                    <h1 class="logo">X-O MATH <span class="badge">PRO</span></h1>
+                    <p class="subtitle">التحدي الاستراتيجي الذكي</p>
                 </header>
 
-                <div class="menu-body">
-                    <div class="players-grid">
-                        <div class="input-box">
-                            <label>فريق X</label>
-                            <input type="text" id="inputNameX" placeholder="أدخل الاسم..." autocomplete="off">
+                <div class="config-panel">
+                    <div class="names-row">
+                        <input type="text" id="pX" placeholder="فريق X" autocomplete="off">
+                        <span class="vs">ضد</span>
+                        <input type="text" id="pO" placeholder="فريق O" autocomplete="off">
+                    </div>
+
+                    <div class="levels-grid">
+                        <div class="lvl-item active" data-lvl="1">
+                            <span class="num">01</span>
+                            <div><h4>كلاسيك</h4><p>جمع وطرح</p></div>
                         </div>
-                        <div class="vs-circle">VS</div>
-                        <div class="input-box">
-                            <label>فريق O</label>
-                            <input type="text" id="inputNameO" placeholder="أدخل الاسم..." autocomplete="off">
+                        <div class="lvl-item" data-lvl="2">
+                            <span class="num">02</span>
+                            <div><h4>مفقود</h4><p>ضرب وقسمة</p></div>
+                        </div>
+                        <div class="lvl-item" data-lvl="3">
+                            <span class="num">03</span>
+                            <div><h4>مزدوج</h4><p>رقمين (بدون 1)</p></div>
+                        </div>
+                        <div class="lvl-item" data-lvl="4">
+                            <span class="num">04</span>
+                            <div><h4>ميزان</h4><p>معادلة كفتين</p></div>
                         </div>
                     </div>
 
-                    <div class="level-cards-container">
-                        <div class="lvl-card active" data-lvl="1">
-                            <div class="lvl-num">01</div>
-                            <div class="lvl-info">
-                                <h3>المستوى الكلاسيكي</h3>
-                                <p>عمليات مباشرة بسيطة (1-9)</p>
-                            </div>
-                        </div>
-                        <div class="lvl-card" data-lvl="2">
-                            <div class="lvl-num">02</div>
-                            <div class="lvl-info">
-                                <h3>العدد المفقود</h3>
-                                <p>أوجد الرقم الذي يكمل المعادلة</p>
-                            </div>
-                        </div>
-                        <div class="lvl-card" data-lvl="3">
-                            <div class="lvl-num">03</div>
-                            <div class="lvl-info">
-                                <h3>الفراغ المزدوج</h3>
-                                <p>تحدي الرقمين (يمنع استخدام 1)</p>
-                            </div>
-                        </div>
-                        <div class="lvl-card" data-lvl="4">
-                            <div class="lvl-num">04</div>
-                            <div class="lvl-info">
-                                <h3>الميزان الرقمي</h3>
-                                <p>موازنة طرفي المعادلة الحسابية</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="quick-settings">
-                        <div class="setting-row">
-                            <label>مؤقت التفكير:</label>
-                            <select id="selectTimer">
+                    <div class="settings-footer">
+                        <div class="timer-box">
+                            <label>المؤقت:</label>
+                            <select id="timerSet">
                                 <option value="0">بدون وقت</option>
-                                <option value="5">5 ثوانٍ</option>
                                 <option value="10" selected>10 ثوانٍ</option>
                                 <option value="20">20 ثانية</option>
                             </select>
                         </div>
-                        <button class="btn-info" onclick="toggleHelpModal(true)">📖 دليل اللعب والقواعد الكامل</button>
+                        <button class="help-btn" onclick="showHelp()">📖 القواعد الكاملة</button>
                     </div>
                 </div>
-
-                <footer class="menu-footer">
-                    <button class="btn-start" id="btnLaunchGame">تأكيد وبدء المباراة</button>
-                </footer>
+                <button id="launchBtn" class="main-btn">تأكيد وبدء اللعب</button>
             </div>
         </div>
 
-        <div id="game-screen" class="app-screen hidden">
-            <div class="arena-container">
-                <header class="arena-top-bar">
-                    <div id="cardX" class="p-status-card x-theme">
-                        <h2 id="displayNameX">TEAM X</h2>
-                        <div class="score-tag">النقاط: <span id="scoreX">0</span></div>
+        <div id="game-screen" class="screen-view" style="display: none;">
+            <div class="arena">
+                <header class="score-bar">
+                    <div id="cardX" class="p-card">
+                        <h3 id="nameX">X</h3>
+                        <span>النقاط: <small id="sX">0</small></span>
                     </div>
-
-                    <div class="main-timer-hub">
-                        <svg class="timer-ring" viewBox="0 0 100 100">
-                            <circle class="ring-track" cx="50" cy="50" r="45"></circle>
-                            <circle id="ring-progress" cx="50" cy="50" r="45"></circle>
+                    <div class="timer-orb">
+                        <svg viewBox="0 0 100 100">
+                            <circle cx="50" cy="50" r="45" class="t-bg"></circle>
+                            <circle cx="50" cy="50" r="45" id="t-fill" class="t-val"></circle>
                         </svg>
-                        <span id="timerText">10</span>
+                        <span id="t-num">10</span>
                     </div>
-
-                    <div id="cardO" class="p-status-card o-theme">
-                        <h2 id="displayNameO">TEAM O</h2>
-                        <div class="score-tag">النقاط: <span id="scoreO">0</span></div>
+                    <div id="cardO" class="p-card">
+                        <h3 id="nameO">O</h3>
+                        <span>النقاط: <small id="sO">0</small></span>
                     </div>
                 </header>
 
-                <main class="arena-grid-area">
-                    <div id="board-81-wrapper"></div>
+                <main class="board-area">
+                    <div id="main-grid"></div>
                 </main>
 
-                <footer class="arena-bottom-bar">
-                    <div id="statusBanner" class="banner hidden">⚡ قوة اللعب الحر متاحة الآن!</div>
-                    <div class="arena-controls">
-                        <button onclick="location.reload()">العودة للرئيسية</button>
-                        <button onclick="toggleDarkMode()">تبديل المظهر</button>
+                <footer class="footer-bar">
+                    <div id="banner" class="banner" style="visibility: hidden;">⚡ لعب حر متاح</div>
+                    <div class="btns">
+                        <button onclick="location.reload()">الرئيسية</button>
+                        <button onclick="toggleMode()">المظهر</button>
                     </div>
                 </footer>
             </div>
         </div>
 
-        <div id="modalHelp" class="modal-overlay hidden">
-            <div class="modal-box help-box">
-                <header class="modal-header">📜 دليل القواعد الكامل</header>
-                <div class="modal-content">
-                    <section>
-                        <h4>1. نظام التوجيه الاستراتيجي</h4>
-                        <p>هذه ليست لعبة إكس أو عادية؛ المربع الصغير الذي تختاره داخل المربع الكبير يحدد لخصمك في أي مربع كبير يجب أن يلعب في حركته القادمة.</p>
-                    </section>
-                    <section>
-                        <h4>2. شروط الفوز والسيطرة</h4>
-                        <p>للفوز بمربع كبير، يجب أن تحصل على 3 مربعات صغيرة متتالية بداخله. وللفوز بالمباراة كاملة، يجب أن تسيطر على 3 مربعات كبيرة بشكل متتالي.</p>
-                    </section>
-                    <section>
-                        <h4>3. قوة اللعب الحر</h4>
-                        <p>إذا وجهك الخصم إلى مربع كبير مكتمل أو فاز به أحد الطرفين، يُفتح لك كامل الجدول كـ "لعب حر" لتختار أي مكان تريد.</p>
-                    </section>
-                    <section>
-                        <h4>4. مستويات التحدي الحسابي</h4>
-                        <ul>
-                            <li><strong>المستوى 1:</strong> عمليات مباشرة (جمع، طرح، ضرب، قسمة) بنواتج من 1 إلى 9.</li>
-                            <li><strong>المستوى 2:</strong> استنتاج الرقم المفقود في طرف المعادلة.</li>
-                            <li><strong>المستوى 3:</strong> إيجاد رقمين يحققان الناتج (يُمنع استخدام الرقم 1).</li>
-                            <li><strong>المستوى 4:</strong> موازنة كفتي الميزان بوضع الرقم الصحيح.</li>
-                        </ul>
-                    </section>
+        <div id="overlay" class="modal-layer" style="display: none;">
+            <div id="help-pop" class="pop-box" style="display: none;">
+                <h2>دليل اللعب الكامل</h2>
+                <div class="pop-body">
+                    <p><strong>نظام التوجيه:</strong> حركتك تحدد موقع خصمك القادم.</p>
+                    <p><strong>المستويات:</strong> من 1 إلى 4 تتدرج في الصعوبة الحسابية.</p>
+                    <p><strong>الفوز:</strong> 3 مربعات كبيرة متتالية.</p>
                 </div>
-                <button class="btn-close-modal" onclick="toggleHelpModal(false)">فهمت القواعد</button>
+                <button onclick="hidePop()">فهمت</button>
             </div>
-        </div>
 
-        <div id="modalMath" class="modal-overlay hidden">
-            <div class="modal-box math-box">
-                <div id="mathLevelTag" class="math-tag">LEVEL 1</div>
-                <div id="mathEquation" class="math-display">-- = --</div>
-                <div class="math-input-box" id="mathPreview">_</div>
-                <div class="math-keypad">
-                    <button onclick="pressKey(1)">1</button><button onclick="pressKey(2)">2</button><button onclick="pressKey(3)">3</button>
-                    <button onclick="pressKey(4)">4</button><button onclick="pressKey(5)">5</button><button onclick="pressKey(6)">6</button>
-                    <button onclick="pressKey(7)">7</button><button onclick="pressKey(8)">8</button><button onclick="pressKey(9)">9</button>
-                    <button class="key-clear" onclick="clearKey()">C</button><button onclick="pressKey(0)">0</button><button class="key-del" onclick="delKey()">تراجع</button>
+            <div id="math-pop" class="pop-box" style="display: none;">
+                <div class="math-head" id="mathLvl">مستوى 1</div>
+                <div class="math-quest" id="mathEq">-- = --</div>
+                <div class="math-view" id="mathAns">_</div>
+                <div class="numpad">
+                    <button onclick="key(1)">1</button><button onclick="key(2)">2</button><button onclick="key(3)">3</button>
+                    <button onclick="key(4)">4</button><button onclick="key(5)">5</button><button onclick="key(6)">6</button>
+                    <button onclick="key(7)">7</button><button onclick="key(8)">8</button><button onclick="key(9)">9</button>
+                    <button class="c" onclick="keyC()">C</button><button onclick="key(0)">0</button><button class="d" onclick="keyD()">⌫</button>
                 </div>
             </div>
         </div>
-
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
