--- a/index.html
+++ b/index.html
@@ -7,166 +7,155 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="light-mode">
-    <div id="dynamic-grid-overlay"></div>
+    <div id="app-canvas-mesh"></div>
 
-    <div id="app-root-container">
+    <div id="main-wrapper">
 
-        <div id="setup-view" class="main-screen active">
-            <div class="glass-container">
-                <header class="app-header">
-                    <h1 class="brand-logo">X-O MATH <span class="badge-pro">PRO</span></h1>
-                    <p class="brand-tagline">النظام الحسابي الأكثر تطوراً للمنافسة والذكاء</p>
+        <div id="setup-view" class="app-screen active">
+            <div class="glass-card main-menu">
+                <header class="menu-header">
+                    <h1 class="logo-text">X-O MATH <span class="badge-pro">PRO</span></h1>
+                    <p class="tagline">الدمج الاحترافي بين الحساب الذهني والتخطيط الاستراتيجي</p>
                 </header>
 
-                <div class="setup-content">
-                    <div class="players-section">
-                        <div class="input-wrapper">
-                            <label>قائد الفريق (X)</label>
-                            <input type="text" id="nameX" placeholder="أدخل اسم اللاعب..." autocomplete="off">
+                <div class="menu-body">
+                    <div class="players-setup-row">
+                        <div class="field-group">
+                            <label>قائد فريق X</label>
+                            <input type="text" id="nameInputX" placeholder="أدخل اسم اللاعب..." autocomplete="off">
                         </div>
-                        <div class="vs-indicator">VS</div>
-                        <div class="input-wrapper">
-                            <label>قائد الفريق (O)</label>
-                            <input type="text" id="nameO" placeholder="أدخل اسم اللاعب..." autocomplete="off">
+                        <div class="vs-badge">VS</div>
+                        <div class="field-group">
+                            <label>قائد فريق O</label>
+                            <input type="text" id="nameInputO" placeholder="أدخل اسم اللاعب..." autocomplete="off">
                         </div>
                     </div>
 
                     <div class="levels-master-grid">
-                        <div class="level-box active" data-lvl="1">
+                        <div class="lvl-card active" data-lvl="1">
                             <div class="lvl-id">01</div>
-                            <div class="lvl-details">
-                                <h3>المستوى الكلاسيكي</h3>
-                                <p>عمليات حسابية مباشرة (جمع، طرح، ضرب، قسمة) بنواتج تتراوح من 1 إلى 9.</p>
+                            <div class="lvl-content">
+                                <h3>المستوى الكلاسيكي المباشر</h3>
+                                <p>عمليات حسابية أساسية (جمع، طرح، ضرب، قسمة) بنواتج مباشرة تتراوح من 1 إلى 9 فقط.</p>
                             </div>
                         </div>
-                        <div class="level-box" data-lvl="2">
+                        <div class="lvl-card" data-lvl="2">
                             <div class="lvl-id">02</div>
-                            <div class="lvl-details">
-                                <h3>تحدي العدد المفقود (?)</h3>
-                                <p>استنتاج المتغير الناقص في أحد أطراف المعادلة لإتمام العملية الحسابية بنجاح.</p>
+                            <div class="lvl-content">
+                                <h3>تحدي الرقم المجهول (?)</h3>
+                                <p>استنتاج الرقم الناقص في أحد أطراف المعادلة (مثلاً: ? × 3 = 12) لإتمام العملية بنجاح.</p>
                             </div>
                         </div>
-                        <div class="level-box" data-lvl="3">
+                        <div class="lvl-card" data-lvl="3">
                             <div class="lvl-id">03</div>
-                            <div class="lvl-details">
-                                <h3>الفراغ المزدوج (X)</h3>
-                                <p>اختيار رقمين يحققان الناتج المطلوب؛ ملاحظة: يُمنع استخدام الرقم 1 في هذا المستوى.</p>
+                            <div class="lvl-content">
+                                <h3>الفراغ المزدوج المتطور</h3>
+                                <p>اختيار رقمين يحققان الناتج المطلوب؛ ملاحظة هامة: يُمنع استخدام الرقم 1 تماماً في هذا المستوى.</p>
                             </div>
                         </div>
-                        <div class="level-box" data-lvl="4">
+                        <div class="lvl-card" data-lvl="4">
                             <div class="lvl-id">04</div>
-                            <div class="lvl-details">
-                                <h3>ميزان القوى الرقمي</h3>
-                                <p>موازنة كفتي المعادلة عبر وضع الرقم الصحيح الذي يجعل الطرفين متعادلين تماماً.</p>
+                            <div class="lvl-content">
+                                <h3>ميزان القوى الرقمي (Balance)</h3>
+                                <p>موازنة طرفي المعادلة بوضع الرقم الذي يجعل الكفة اليمنى تعادل الكفة اليسرى تماماً.</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="options-bar">
-                        <div class="select-control">
+                    <div class="settings-row">
+                        <div class="timer-config">
                             <label>مؤقت التفكير:</label>
-                            <select id="timerConfig">
+                            <select id="configTimer">
                                 <option value="0">بدون وقت (لعب مفتوح)</option>
-                                <option value="5">تحدي سريع (5 ثوانٍ)</option>
+                                <option value="5">تحدي البرق (5 ثوانٍ)</option>
                                 <option value="10" selected>تحدي قياسي (10 ثوانٍ)</option>
                                 <option value="20">تحدي المبتدئين (20 ثانية)</option>
                             </select>
                         </div>
-                        <button class="instructions-btn" onclick="toggleInstructionModal(true)">📖 دليل القواعد والمنطق بالتفصيل</button>
+                        <button class="btn-guide-modal" onclick="showHelpModal()">📖 دليل القوانين والمنطق التفصيلي</button>
                     </div>
                 </div>
 
-                <footer class="setup-footer">
-                    <button class="launch-game-btn" id="btnStartGame">تأكيد الإعدادات وبدء المباراة</button>
+                <footer class="menu-footer">
+                    <button class="btn-primary-start" id="btnLaunchGame">تأكيد الإعدادات وبدء المباراة</button>
                 </footer>
             </div>
         </div>
 
-        <div id="game-view" class="main-screen">
+        <div id="game-view" class="app-screen">
             <div class="arena-layout">
-                <header class="arena-top-bar">
-                    <div id="p-stats-X" class="player-status-card x-theme">
-                        <h2 id="displayNameX">TEAM X</h2>
-                        <div class="points">النقاط: <span id="scoreX">0</span></div>
+                <header class="arena-top">
+                    <div id="card-X" class="player-card side-x">
+                        <h2 id="viewNameX">TEAM X</h2>
+                        <div class="score">النقاط: <span id="valScoreX">0</span></div>
                     </div>
 
-                    <div class="timer-orb-section">
-                        <svg class="circular-timer" viewBox="0 0 100 100">
-                            <circle class="timer-bg" cx="50" cy="50" r="45"></circle>
-                            <circle id="timer-progress" class="timer-value" cx="50" cy="50" r="45"></circle>
+                    <div class="timer-orb-hub">
+                        <svg class="orb-svg" viewBox="0 0 100 100">
+                            <circle class="orb-bg" cx="50" cy="50" r="45"></circle>
+                            <circle id="orb-prog" class="orb-val" cx="50" cy="50" r="45"></circle>
                         </svg>
-                        <span id="timer-countdown">10</span>
+                        <span id="orb-text">10</span>
                     </div>
 
-                    <div id="p-stats-O" class="player-status-card o-theme">
-                        <h2 id="displayNameO">TEAM O</h2>
-                        <div class="points">النقاط: <span id="scoreO">0</span></div>
+                    <div id="card-O" class="player-card side-o">
+                        <h2 id="viewNameO">TEAM O</h2>
+                        <div class="score">النقاط: <span id="valScoreO">0</span></div>
                     </div>
                 </header>
 
-                <main class="arena-center-grid">
-                    <div id="grid-ultimate-81"></div>
+                <main class="arena-center">
+                    <div id="main-grid-ultimate"></div>
                 </main>
 
-                <footer class="arena-bottom-bar">
-                    <div id="free-play-msg" class="info-banner hidden">⚡ وضع اللعب الحر متاح الآن</div>
-                    <div class="arena-actions">
-                        <button onclick="location.reload()" class="action-btn">القائمة الرئيسية</button>
-                        <button onclick="toggleVisualMode()" class="action-btn">تبديل المظهر</button>
+                <footer class="arena-bottom">
+                    <div id="logicBanner" class="info-banner hidden">⚡ وضع اللعب الحر متاح الآن</div>
+                    <div class="arena-btns">
+                        <button onclick="location.reload()" class="btn-util">القائمة الرئيسية</button>
+                        <button onclick="toggleTheme()" class="btn-util">تبديل المظهر</button>
                     </div>
                 </footer>
             </div>
         </div>
 
-        <div id="modalInstructions" class="modal-overlay">
-            <div class="modal-content-box help-box">
-                <header class="modal-header">📜 الدليل الكامل لمنطق اللعبة</header>
-                <div class="modal-body">
-                    <section class="help-section">
+        <div id="modal-layer" class="overlay-layer" style="display:none;">
+            
+            <div id="help-pane" class="modal-pane" style="display:none;">
+                <header class="pane-header">📜 الدليل الكامل لمنطق اللعبة</header>
+                <div class="pane-content scrollable">
+                    <section>
                         <h3>1. منطق الفوز (نظام السيطرة الشاملة)</h3>
-                        <p>تتكون اللوحة من 9 مربعات كبيرة، وبداخل كل مربع كبير 9 مربعات صغيرة. لكي تسيطر على "مربع كبير"، يجب أن تحصل على 3 علامات (X أو O) متتالية بداخله. الفوز بالمباراة يتطلب السيطرة على 3 مربعات كبيرة متتالية على اللوحة العملاقة.</p>
+                        <p>اللعبة تتكون من 9 مربعات كبيرة، وبداخل كل مربع كبير 9 مربعات صغيرة. لكي تسيطر على "مربع كبير"، يجب أن تحصل على 3 علامات متتالية بداخله. الفوز بالمباراة يتطلب السيطرة على 3 مربعات كبيرة متتالية على اللوحة العملاقة.</p>
                     </section>
-                    <section class="help-section">
+                    <section>
                         <h3>2. قانون التوجيه الاستراتيجي (محرك اللعبة)</h3>
-                        <p>هذا هو الجزء الأهم؛ موقع المربع الصغير الذي تختاره هو الذي يحدد لخصمك في أي مربع كبير يجب أن يلعب. إذا اخترت المربع العلوي الأيسر داخل مربع صغير، فإن خصمك مجبر على اللعب في المربع الكبير الموجود في أعلى يسار اللوحة العملاقة.</p>
+                        <p>هذا هو الجزء الأهم؛ موقع المربع الصغير الذي تضغط عليه هو الذي يحدد لخصمك في أي مربع كبير يجب أن يلعب في حركته القادمة. (مثال: إذا اخترت المربع العلوي الأيسر، سيجبر خصمك على اللعب في المربع الكبير الموجود في أعلى يسار اللوحة العملاقة).</p>
                     </section>
-                    <section class="help-section">
+                    <section>
                         <h3>3. قوة اللعب الحر (Free Play)</h3>
-                        <p>إذا قام خصمك بتوجيهك إلى مربع كبير ممتلئ تماماً أو فاز به أحد اللاعبين سابقاً، يتم تفعيل "اللعب الحر" لك، مما يسمح لك باختيار أي مربع شاغر في اللوحة بأكملها.</p>
+                        <p>إذا قام خصمك بتوجيهك إلى مربع كبير ممتلئ تماماً أو فاز به أحد اللاعبين سابقاً، يتم تفعيل "اللعب الحر" لك، مما يسمح لك باختيار أي مربع شاغر في اللوحة بأكملها دون قيود التوجيه.</p>
                     </section>
-                    <section class="help-section">
-                        <h3>4. التحدي الرياضي</h3>
-                        <p>عند كل محاولة لوضع علامتك، سيظهر لك سؤال رياضي بناءً على المستوى الذي اخترته. يجب الإجابة بشكل صحيح قبل انتهاء الوقت لتتمكن من تنفيذ حركتك.</p>
+                    <section>
+                        <h3>4. التحدي الرياضي والوقت</h3>
+                        <p>عند كل محاولة لوضع علامتك، سيظهر سؤال رياضي بناءً على مستواك المختار. يجب الإجابة صحيحاً قبل انتهاء الوقت. الفشل يضيع عليك الدور ويعطي الخصم ميزة اللعب الحر.</p>
                     </section>
                 </div>
-                <button class="close-modal-btn" onclick="toggleInstructionModal(false)">فهمت القواعد، عودة</button>
+                <button class="btn-close-modal" onclick="hideAllModals()">فهمت القواعد، لنبدأ</button>
             </div>
-        </div>
 
-        <div id="modalMathChallenge" class="modal-overlay">
-            <div class="modal-content-box math-box">
-                <div id="math-lvl-tag" class="math-tag">المستوى 1</div>
-                <div id="math-equation-text" class="math-display">-- = --</div>
-                <div class="math-preview-screen" id="math-input-preview">_</div>
-                <div class="numpad-container">
-                    <button class="num-key" onclick="handleKeyPress(1)">1</button>
-                    <button class="num-key" onclick="handleKeyPress(2)">2</button>
-                    <button class="num-key" onclick="handleKeyPress(3)">3</button>
-                    <button class="num-key" onclick="handleKeyPress(4)">4</button>
-                    <button class="num-key" onclick="handleKeyPress(5)">5</button>
-                    <button class="num-key" onclick="handleKeyPress(6)">6</button>
-                    <button class="num-key" onclick="handleKeyPress(7)">7</button>
-                    <button class="num-key" onclick="handleKeyPress(8)">8</button>
-                    <button class="num-key" onclick="handleKeyPress(9)">9</button>
-                    <button class="num-key special clear" onclick="handleClear()">C</button>
-                    <button class="num-key" onclick="handleKeyPress(0)">0</button>
-                    <button class="num-key special del" onclick="handleDelete()">⌫</button>
+            <div id="math-pane" class="modal-pane" style="display:none;">
+                <div id="mathTag" class="math-lvl-badge">المستوى 1</div>
+                <div id="mathEq" class="math-equation-view">-- = --</div>
+                <div id="mathInput" class="math-preview-box">_</div>
+                <div class="math-numpad">
+                    <button onclick="nPress(1)">1</button><button onclick="nPress(2)">2</button><button onclick="nPress(3)">3</button>
+                    <button onclick="nPress(4)">4</button><button onclick="nPress(5)">5</button><button onclick="nPress(6)">6</button>
+                    <button onclick="nPress(7)">7</button><button onclick="nPress(8)">8</button><button onclick="nPress(9)">9</button>
+                    <button class="k-clear" onclick="nClear()">C</button><button onclick="nPress(0)">0</button><button class="k-del" onclick="nDel()">⌫</button>
                 </div>
             </div>
         </div>
-
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
